--- a/Stoic Thoughts/philosphers.html
+++ b/Stoic Thoughts/philosphers.html
@@ -28,14 +28,14 @@
 	<!--philosophers-->
 	<div class="row">
 		<div class="col">
-			<img src="images/MAcard.jpg">
+			<img src="images/MAcard.jpg" alt="Marcus">
 			<h2>Marcus Aurelius</h2>
 			<p>Probably the most well know was Marcus Aurelius. He was a roman emperor. <strong>"The Meditations" by Marcus Aurelius</strong>strong is considered an esential text for anyone who studies stoicism.</p>
 			<a class="button" href="https://en.wikipedia.org/wiki/Marcus_Aurelius">wikipedia page</a>
 		</div>
 		
 		<div class=" col">
-			<img src="images/senecacard.jpg">
+			<img src="images/senecacard.jpg" alt="Seneca">
 			<h2>Seneca</h2>
 			<p>Seneca was a roman statesman that wrote extensively about stoicism and living a stoic life.
 				His principle work is <strong>"Letters from a Stoic"</strong>
@@ -44,7 +44,7 @@
 		</div>
 			
 		<div class="col">
-			<img src="images/epictituscard.jpg">
+			<img src="images/epictituscard.jpg" alt="epictitus">
 			<h2>Epictitus</h2>
 			<p>living a vastly different style of life Epictitus was a slave. However he is one of the central figures of stoicism.
 				He had many great writtings but probably his most famous is <strong>"The Enchiridion."</strong>
