--- a/Stoic Thoughts/control.html
+++ b/Stoic Thoughts/control.html
@@ -17,7 +17,7 @@
 			<li><a href="wisdom.html">Wisdom</a></li>
 		</ul>
 	</header><!--Heading-->   
-    <img src="images/tempel.jpg">
+    <img src="images/tempel.jpg" alt="Tempel">
 	<div class="pagetitle">
 		<h1 class="headtitle">The Dichotomy of control
 		</h1>
